2007-12-06  Michael Riepe  <too-tired@users.sourceforge.net>

	* src/dvbcutbase.ui:
		Use zero margin.

2007-11-28  Michael Riepe  <too-tired@users.sourceforge.net>

	* src/lavfmuxer.cpp:
		Compatibility patch for libavformat >= 52.0.0
		(contributed by Alexis Ballier).

2007-11-28  Wolfram Gloger  <video06@malloc.de>  (mr)

	* src/dvbcut.cpp:
	* src/mpegmuxer.cpp:
		Allow output to a pipe.

	* src/port.h:
		Include <sys/wait.h> on Unix/Linux.
 
2007-11-26  Ralph Glasstetter  <ralph.glasstetter@web.de>  (mr)

	* src/dvbcutbase.ui
	* src/dvbcut.cpp
	* src/dvbcut.h
	* src/settings.cpp
	* src/settings.h
		Configurable snapshot parameters and chapter snapshots.

2007-11-24  Ralph Glasstetter  <ralph.glasstetter@web.de>  (mr)

	* src/tsfile.cpp
	* src/tsfile.h
		Import bookmarks from new Topfield TF7700HDPVR.

	* src/mpgfile.cpp
	* src/mpgfile.h
		readfile() to read (small) files to memory.

	* src/buffer.cpp
	* src/buffer.h
		Store filename in files structure.
		
2007-11-12  Michael Riepe  <too-tired@users.sourceforge.net>

	* src/lavfmuxer.cpp:
		Fix by Wolfram Gloger.

2007-11-03  Michael Riepe  <too-tired@users.sourceforge.net>

	* src/tsfile.cpp:
		Detect legacy audio stream types.

2007-10-30  Ralph Glasstetter  <ralph.glasstetter@web.de>  (mr)

	* src/dvbcut.cpp:
	* src/dvbcut.h:
		New quick_picture_lookup_table (also used for export)!
		
2007-10-30  Ralph Glasstetter  <ralph.glasstetter@web.de>  (mr)

	* src/dvbcut.cpp:
	* src/settings.cpp:
	* src/settings.h:
		Automatically add missing start/stop markers at BOF/EOF, 
		configurable via "start_bof"/"stop_eof" in settings file.

	* src/main.cpp:
		Improved checking of cut list.

2007-10-29  Ralph Glasstetter  <ralph.glasstetter@web.de>  (mr)

	* src/dvbcut.cpp:
	* src/dvbcut.h:
	* src/main.cpp:
	* src/dvbcutbase.ui:
		Allow timestamps in input fields, added -exp option. 
		-exp/-cut/-idx options overrule project file defaults.
		Add specific "Delete"-entries to marker context menu. 